--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 <head>
-  <title>Ye Olde Sea Sled Website</title>
+  <title>Sea Sled Build Project</title>
   
 </head>
 <body>
 <h1>My Sea-Sled Build Project</h1>
+  <p>Albert Hickman Sea-Sled inspired Design Build Project Page.</p>
   <p>Hopefully you enjoy what i am doing and if you do buy me a cup of coffee.</p>
+
+
 </body>
 
   
