--- a/sensibulb.html
+++ b/sensibulb.html
@@ -1,5 +1,9 @@
+<head>
+   <link rel="stylesheet" href="main.css">
+</head>
+
 <h1>Sensibulb Info Page</h1>
 
 <p>The SensiBulb was released around the year 2000 as LED lighting was relatively new for boats. The main selling feature of this bulb was that it produced warm and pleasant lighting versus the rather cold and harsh lighting that LED lighting was known for. I am not sure if the succeeded but I wanted to take a look at some of the equipment on the light and compare to modern LED technology for boats. </p>
 
-<img src="sensibulbmainimage.webp">This is an example package of a sensibulb</img>
+<img src="sensibulbmainimage.webp" class="responsive-image">This is an example package of a sensibulb</img>
