--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 <h1>My Sea-Sled Build Project</h1>
+
+<a href="sensibulb.html">Goto Sensibulb Page</a>
+
+  
   <p>Albert Hickman Sea-Sled inspired Design Build Project Page.</p>
   <p>Hopefully you enjoy what i am doing and if you do buy me a cup of coffee.</p>
 
