--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   <p>Albert Hickman Sea-Sled inspired Design Build Project Page.</p>
   <p>Hopefully you enjoy what i am doing and if you do buy me a cup of coffee.</p>
 
+  <h2>Important Topics To Cover</h2>
+  <ul>
+      <li>Hull Design, Lofting and Plans</li>
+    <li>Lighting Plan and Components</li>
+    <li>Plumbing Freshwater, Drains Etc..</li>
+    
+  </ul>
 
 </body>
 
