--- a/deltafaucet.html
+++ b/deltafaucet.html
@@ -1,6 +1,8 @@
 <head>
-  <title>Delta Faucet Selection</title>
+  <title>Delta Faucet Selection</title> 
+  <link rel="stylesheet" href="main.css">
 </head>
+
 
 <h1>Delta Faucet</h1>
 
