--- a/plumbing.html
+++ b/plumbing.html
@@ -3,4 +3,4 @@
 <p>The idea here is to create a sort of main page that branches off into all of the various plumbing sub pages with the concerns, issues and challenges.</p>
 
 This is a link to a information page on the Delta Bar Faucet chosen for the sea sled build project.
-<a href="deltaFaucet.html">Goto Delta Faucet Sub Page</a>
+<a href="deltafaucet.html">Goto Delta Faucet Sub Page</a>
