--- a/plumbing.html
+++ b/plumbing.html
@@ -1,5 +1,8 @@
 <h1>Plumbing Main Page</h1>
 
+<h2>Navigation</h2>
+<a href="index.html">Return to Homepage</a>
+
 <p>The idea here is to create a sort of main page that branches off into all of the various plumbing sub pages with the concerns, issues and challenges.</p>
 
 This is a link to a information page on the Delta Bar Faucet chosen for the sea sled build project.
