--- a/plumbing.html
+++ b/plumbing.html
@@ -7,3 +7,13 @@
 
 This is a link to a information page on the Delta Bar Faucet chosen for the sea sled build project.
 <a href="deltafaucet.html">Goto Delta Faucet Sub Page</a>
+
+
+<p>The sea sled is a generally small boat so it is limited as far as plumbering goes. The following areas seem to need some plumbing.</p>
+
+<ul>
+  <li>Sink</li>
+  <li>12 Volt Water Pump</li>
+  <li>Water Tank</li>
+
+</ul>
