--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <a href="sensibulb.html">Goto Sensibulb Page</a>
 <a href="plumbing.html">Goto Plumbing Main Page</a>
 <a href="deltafaucet.html">Goto Delta Faucet Sub Page</a>
+<a href="environmental.html">Goto Environmental Controls Sub Page</a>
+
   
   <p>Albert Hickman Sea-Sled inspired Design Build Project Page.</p>
   <p>Hopefully you enjoy what i am doing and if you do buy me a cup of coffee.</p>
