--- a/vhfradio.html
+++ b/vhfradio.html
@@ -1,8 +1,44 @@
 <h1>VHF Radio Options</h1>
-
-Ray49 Radio
-
-
-<p>The Ray240 was the best black box radio of the GPM400 era.</p>
-
-<a href="https://www.raymarine.com/en-us/our-products/retired-products/retired-vhf-communications/ray240-240e">Link to Raymarine Product Page</a>
+<p>It is popular that a boat has both a primary and a secondary VHF radio 
+however this is less critical on smaller craft that simply don't have the 
+batteries for this as well as being unable to venture out quite as far. Since I 
+have decided to keep with the Raymarine GPM400 Helm Setup I would like to choose 
+a period accurate and stylistically cohesive VHF radio choice to keep with the 
+vintage look. I also have a sneaky suspicion that the electronics from this era 
+were of better quality.</p>
+<h2>Raymarine VHF Options</h2>
+<table border="1" width="88%" cellspacing="5" cellpadding="5" bordercolor="#C0C0C0" id="table1">
+	<tr>
+		<td width="97">Ray49</td>
+		<td>
+		<ul>
+			<li>Waterproof to IPX-7</li>
+			<li>Digital Select Calling (DSC)</li>
+			<li>Multiple Scan Options</li>
+		</ul>
+		</td>
+	</tr>
+	<tr>
+		<td width="97">Ray240/240E</td>
+		<td>
+		<ul>
+			<li>Black Box Modular Unit Frees Up Dash Space</li>
+			<li>Loudhailer Output</li>
+			<li>Dual Station Capable</li>
+			<li>Battery Low Voltage Alert (Below 10.5V)</li>
+			<li>Introduced approx. 2005</li>
+		</ul>
+		</td>
+	</tr>
+	<tr>
+		<td width="97">Ray 218/218E</td>
+		<td>
+		<ul>
+			<li>Introduced approx. 2007</li>
+			<li>Dual Station Capable</li>
+		</ul>
+		</td>
+	</tr>
+</table>
+<p>
+<img border="0" src="file:///Z:/Seated%20Human.jpg" width="281" height="175" alt="Close up of the screen of a Raymarine Ray218 VHF Radio"></p>
