--- a/vhfradio.html
+++ b/vhfradio.html
@@ -41,4 +41,4 @@ were of better quality.</p>
 	</tr>
 </table>
 <p>
-<img border="0" src="file:///Z:/Seated%20Human.jpg" width="281" height="175" alt="Close up of the screen of a Raymarine Ray218 VHF Radio"></p>
+<img border="0" src="Ray218Screen.jpg" class="responsive-image" alt="Close up of the screen of a Raymarine Ray218 VHF Radio"></p>
