--- a/vhfradio.html
+++ b/vhfradio.html
@@ -1,4 +1,7 @@
 <h1>VHF Radio Options</h1>
+
+<a href="index.html">Return To Homepage</a>
+
 <p>It is popular that a boat has both a primary and a secondary VHF radio 
 however this is less critical on smaller craft that simply don't have the 
 batteries for this as well as being unable to venture out quite as far. Since I 
