--- a/vhfradio.html
+++ b/vhfradio.html
@@ -44,4 +44,4 @@ were of better quality.</p>
 	</tr>
 </table>
 <p>
-<img border="0" src="Ray218Screen.jpg" class="responsive-image" alt="Close up of the screen of a Raymarine Ray218 VHF Radio"></p>
+<img src="Ray218Screen.jpg" class="responsive-image" alt="Close up of the screen of a Raymarine Ray218 VHF Radio"></p>
