--- a/vhfradio.html
+++ b/vhfradio.html
@@ -1,3 +1,8 @@
+<html lang="en">
+<head>
+	
+</head>	
+<body>
 <h1>VHF Radio Options</h1>
 
 <a href="index.html">Return To Homepage</a>
@@ -45,3 +50,5 @@ were of better quality.</p>
 </table>
 <p>
 <img src="Ray218Screen.jpg" class="responsive-image" alt="Close up of the screen of a Raymarine Ray218 VHF Radio"></p>
+</body>
+</html>
