--- a/vhfradio.html
+++ b/vhfradio.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
-	
+	<title>VHF Radio Options</title> 
+	<link rel="stylesheet" href="main.css">
 </head>	
 <body>
 <h1>VHF Radio Options</h1>
