--- a/vhfradio.html
+++ b/vhfradio.html
@@ -50,6 +50,11 @@ were of better quality.</p>
 	</tr>
 </table>
 <p>
-<img src="Ray218Screen.jpg" class="responsive-image" alt="Close up of the screen of a Raymarine Ray218 VHF Radio"></p>
+<img src="Ray218Screen.jpg" class="responsive-image" alt="Close up of the screen of a Raymarine Ray218 VHF Radio"></img>
+</p>
+
+<h2>Raymarine Accessories</h2>
+<img src="RaymarineSpeaker.jpg" class=responsive-image" alt="An overview of the components that come with the Raymarine Dash speaker"></img>
+
 </body>
 </html>
