--- a/vhfradio.html
+++ b/vhfradio.html
@@ -50,7 +50,7 @@ were of better quality.</p>
 	</tr>
 </table>
 <p>
-<img src="Ray218Screen.jpg" class="responsive-image" alt="Close up of the screen of a Raymarine Ray218 VHF Radio"></img>
+<img src="Ray218Screen.jpg" class="responsive-image" alt="Close up of the screen of a Raymarine Ray218 VHF Radio">
 </p>
 
 <h2>Raymarine Accessories</h2>
