--- a/vhfradio.html
+++ b/vhfradio.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>VHF Radio Options</title> 
 	<link rel="stylesheet" href="main.css">
 </head>	
