--- a/plumbing.html
+++ b/plumbing.html
@@ -1,3 +1,11 @@
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Plumbing Main Page</title>
+  </head>
+
+<body>
+
 <h1>Plumbing Main Page</h1>
 
 <h2>Navigation</h2>
@@ -17,3 +25,6 @@ This is a link to a information page on the Delta Bar Faucet chosen for the sea 
   <li>Water Tank</li>
 
 </ul>
+
+</body>
+</html>
